--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "firebase": "^9.17.2",
     "rxfire": "^6.0.3",
     "rxjs": "~7.5.0",
